monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2007/A2007Sup6.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2007;

grammar A2007Sup6 extends de.monticore.grammar.cocos.invalid.A2007.A2007Super {

  A extends M = M? "one" M;

}